third_party/move/move-prover/tests/sources/functional/enum_invariants.exp
Move prover returns: exiting with verification errors
error: data invariant does not hold
   ┌─ tests/sources/functional/enum_invariants.move:12:9
   │
12 │         invariant self.bar > 0;
   │         ^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/enum_invariants.move:31: sub_one_if_second_fail
   =         self = <redacted>
   =     at tests/sources/functional/enum_invariants.move:33: sub_one_if_second_fail
   =     at tests/sources/functional/enum_invariants.move:34: sub_one_if_second_fail
   =         bar = <redacted>
   =         self = <redacted>
   =     at tests/sources/functional/enum_invariants.move:32: sub_one_if_second_fail
   =         self = <redacted>
   =     at tests/sources/functional/enum_invariants.move:12
